리뷰 데이터 크롤링

--- a/2gyeong.ipynb
+++ b/2gyeong.ipynb
@@ -342,6 +342,246 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script type=\"text/javascript\" src=\"https://ssl.gstatic.com/trends_nrtr/3940_RC01/embed_loader.js\"></script> <script type=\"text/javascript\"> trends.embed.renderExploreWidget(\"TIMESERIES\", {\"comparisonItem\":[{\"keyword\":\"영화관\",\"geo\":\"KR\",\"time\":\"today 12-m\"},{\"keyword\":\"박물관\",\"geo\":\"KR\",\"time\":\"today 12-m\"},{\"keyword\":\"미술관\",\"geo\":\"KR\",\"time\":\"today 12-m\"}],\"category\":0,\"property\":\"\"}, {\"exploreQuery\":\"geo=KR&q=%EC%98%81%ED%99%94%EA%B4%80,%EB%B0%95%EB%AC%BC%EA%B4%80,%EB%AF%B8%EC%88%A0%EA%B4%80&hl=ko&date=today 12-m,today 12-m,today 12-m\",\"guestPath\":\"https://trends.google.co.kr:443/trends/embed/\"}); </script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script type=\"text/javascript\" src=\"https://ssl.gstatic.com/trends_nrtr/3940_RC01/embed_loader.js\"></script> <script type=\"text/javascript\"> trends.embed.renderExploreWidget(\"TIMESERIES\", {\"comparisonItem\":[{\"keyword\":\"영화관\",\"geo\":\"KR\",\"time\":\"today 12-m\"},{\"keyword\":\"박물관\",\"geo\":\"KR\",\"time\":\"today 12-m\"},{\"keyword\":\"미술관\",\"geo\":\"KR\",\"time\":\"today 12-m\"}],\"category\":0,\"property\":\"\"}, {\"exploreQuery\":\"geo=KR&q=%EC%98%81%ED%99%94%EA%B4%80,%EB%B0%95%EB%AC%BC%EA%B4%80,%EB%AF%B8%EC%88%A0%EA%B4%80&hl=ko&date=today 12-m,today 12-m,today 12-m\",\"guestPath\":\"https://trends.google.co.kr:443/trends/embed/\"}); </script>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>네이버 리뷰 크롤링</h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: selenium in /opt/anaconda3/envs/study/lib/python3.12/site-packages (4.27.1)\n",
+      "Requirement already satisfied: urllib3<3,>=1.26 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.2.3)\n",
+      "Requirement already satisfied: trio~=0.17 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from selenium) (0.27.0)\n",
+      "Requirement already satisfied: trio-websocket~=0.9 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from selenium) (0.11.1)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from selenium) (2024.8.30)\n",
+      "Requirement already satisfied: typing_extensions~=4.9 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from selenium) (4.11.0)\n",
+      "Requirement already satisfied: websocket-client~=1.8 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from selenium) (1.8.0)\n",
+      "Requirement already satisfied: attrs>=23.2.0 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from trio~=0.17->selenium) (24.3.0)\n",
+      "Requirement already satisfied: sortedcontainers in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from trio~=0.17->selenium) (2.4.0)\n",
+      "Requirement already satisfied: idna in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from trio~=0.17->selenium) (3.7)\n",
+      "Requirement already satisfied: outcome in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from trio~=0.17->selenium) (1.3.0.post0)\n",
+      "Requirement already satisfied: sniffio>=1.3.0 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from trio~=0.17->selenium) (1.3.0)\n",
+      "Requirement already satisfied: wsproto>=0.14 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
+      "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
+      "Requirement already satisfied: h11<1,>=0.9.0 in /opt/anaconda3/envs/study/lib/python3.12/site-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install selenium\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error during click 11: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\".TeItc\"}\n",
+      "  (Session info: chrome=131.0.6778.205); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\n",
+      "Stacktrace:\n",
+      "0   chromedriver                        0x00000001008e3184 cxxbridge1$str$ptr + 3626716\n",
+      "1   chromedriver                        0x00000001008db9d4 cxxbridge1$str$ptr + 3596076\n",
+      "2   chromedriver                        0x0000000100348968 cxxbridge1$string$len + 89228\n",
+      "3   chromedriver                        0x000000010038cd50 cxxbridge1$string$len + 368756\n",
+      "4   chromedriver                        0x00000001003c65b4 cxxbridge1$string$len + 604376\n",
+      "5   chromedriver                        0x0000000100381568 cxxbridge1$string$len + 321676\n",
+      "6   chromedriver                        0x00000001003821b8 cxxbridge1$string$len + 324828\n",
+      "7   chromedriver                        0x00000001008ae9ac cxxbridge1$str$ptr + 3411716\n",
+      "8   chromedriver                        0x00000001008b1ccc cxxbridge1$str$ptr + 3424804\n",
+      "9   chromedriver                        0x000000010089586c cxxbridge1$str$ptr + 3308996\n",
+      "10  chromedriver                        0x00000001008b258c cxxbridge1$str$ptr + 3427044\n",
+      "11  chromedriver                        0x000000010088709c cxxbridge1$str$ptr + 3249652\n",
+      "12  chromedriver                        0x00000001008cc4b8 cxxbridge1$str$ptr + 3533328\n",
+      "13  chromedriver                        0x00000001008cc634 cxxbridge1$str$ptr + 3533708\n",
+      "14  chromedriver                        0x00000001008db648 cxxbridge1$str$ptr + 3595168\n",
+      "15  libsystem_pthread.dylib             0x000000018fc29034 _pthread_start + 136\n",
+      "16  libsystem_pthread.dylib             0x000000018fc23e3c thread_start + 8\n",
+      "\n",
+      "Found 102 reviews\n",
+      "Reviews saved to naver_reviews_2025-01-03_15-30-14.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium.webdriver.common.by import By\n",
+    "from urllib3.util.retry import Retry\n",
+    "from requests.adapters import HTTPAdapter\n",
+    "from selenium import webdriver\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "import time\n",
+    "import datetime\n",
+    "import requests\n",
+    "import csv\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "\n",
+    "# url\n",
+    "url = 'https://m.place.naver.com/place/11621150/review/visitor'\n",
+    "\n",
+    "# Webdriver headless mode setting\n",
+    "options = webdriver.ChromeOptions()\n",
+    "# options.add_argument('headless')\n",
+    "options.add_argument('window-size=1920x1080')\n",
+    "options.add_argument(\"disable-gpu\")\n",
+    "\n",
+    "# BS4 setting for secondary access\n",
+    "session = requests.Session()\n",
+    "headers = {\n",
+    "    \"User-Agent\": \"user value\"}\n",
+    "\n",
+    "retries = Retry(total=5,\n",
+    "                backoff_factor=0.1,\n",
+    "                status_forcelist=[500, 502, 503, 504])\n",
+    "\n",
+    "session.mount('http://', HTTPAdapter(max_retries=retries))\n",
+    "\n",
+    "# New CSV file\n",
+    "now = datetime.datetime.now()\n",
+    "csv_file = 'naver_reviews_' + now.strftime('%Y-%m-%d_%H-%M-%S') + '.csv'\n",
+    "\n",
+    "# Start crawling/scraping!\n",
+    "try:\n",
+    "    driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=options)\n",
+    "    driver.get(url)\n",
+    "    \n",
+    "    # Wait until the page is fully loaded and the span element with class 'TeItc' is clickable\n",
+    "    WebDriverWait(driver, 10).until(\n",
+    "        EC.element_to_be_clickable((By.CLASS_NAME, 'TeItc'))\n",
+    "    )\n",
+    "    \n",
+    "    # Click the span element with class 'TeItc' 30 times\n",
+    "    for i in range(30):  # Maximum 30 clicks\n",
+    "        try:\n",
+    "            # Find the span element by its class name and click it\n",
+    "            span_element = driver.find_element(By.CLASS_NAME, 'TeItc')\n",
+    "            span_element.click()\n",
+    "            time.sleep(2)  # Wait for the page to load after each click\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error during click {i + 1}: {e}\")\n",
+    "            break  # If an error occurs, stop the process\n",
+    "    \n",
+    "    # Wait for some time after the last click to ensure all content has loaded\n",
+    "    time.sleep(5)\n",
+    "    \n",
+    "    # Get the page source after clicking\n",
+    "    html = driver.page_source\n",
+    "    bs = BeautifulSoup(html, 'lxml')\n",
+    "    \n",
+    "    # Extract the reviews\n",
+    "    reviews = bs.select('li.pui__X35jYm.EjjAW')  # Ensure this CSS selector is correct\n",
+    "\n",
+    "    # If reviews are found, process them\n",
+    "    if reviews:\n",
+    "        print(f\"Found {len(reviews)} reviews\")\n",
+    "        \n",
+    "        # Write reviews to CSV file\n",
+    "        with open(csv_file, mode='w', newline='', encoding='utf-8') as file:\n",
+    "            writer = csv.writer(file)\n",
+    "            writer.writerow(['content'])  # Writing the header\n",
+    "            for r in reviews:\n",
+    "                # content\n",
+    "                content = r.select_one('div.pui__vn15t2 > a')  # Ensure this selector is correct\n",
+    "\n",
+    "                # exception handling\n",
+    "                content = content.text if content else ''\n",
+    "\n",
+    "                # Write content to CSV\n",
+    "                writer.writerow([content])\n",
+    "                time.sleep(0.06)\n",
+    "    else:\n",
+    "        print(\"No reviews found.\")\n",
+    "    \n",
+    "    print(f\"Reviews saved to {csv_file}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    # Save CSV file even if an error occurs\n",
+    "    with open(csv_file, mode='w', newline='', encoding='utf-8') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerow(['content'])  # Writing the header\n",
+    "    print(f\"Reviews saved to {csv_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     국립중앙박물관   너무  다양한   많은   보고   있는        있다        전시  좋아요   좋은\n",
+      "0        0.0  0.0  0.0  0.0  0.0  0.0  1.000000  0.000000  0.0  0.0\n",
+      "1        0.0  0.0  0.0  0.0  0.0  0.0  0.716154  0.697943  0.0  0.0\n",
+      "2        0.0  0.0  0.0  0.0  0.0  0.0  0.000000  0.000000  0.0  0.0\n",
+      "3        0.0  0.0  0.0  0.0  0.0  0.0  1.000000  0.000000  0.0  0.0\n",
+      "4        1.0  0.0  0.0  0.0  0.0  0.0  0.000000  0.000000  0.0  0.0\n",
+      "..       ...  ...  ...  ...  ...  ...       ...       ...  ...  ...\n",
+      "286      0.0  0.0  0.0  0.0  0.0  0.0  0.000000  0.000000  0.0  0.0\n",
+      "287      0.0  0.0  0.0  0.0  0.0  0.0  0.000000  0.000000  0.0  1.0\n",
+      "288      0.0  0.0  0.0  0.0  0.0  0.0  0.000000  0.000000  0.0  0.0\n",
+      "289      0.0  0.0  0.0  0.0  0.0  0.0  0.000000  0.000000  0.0  0.0\n",
+      "290      0.0  0.0  0.0  0.0  0.0  0.0  0.000000  0.000000  0.0  0.0\n",
+      "\n",
+      "[291 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "# CSV 파일 경로\n",
+    "csv_file = 'naver_reviews_2025-01-03_15-23-22.csv'  # 예시 파일 이름\n",
+    "\n",
+    "# CSV 파일 읽기\n",
+    "df = pd.read_csv(csv_file)\n",
+    "\n",
+    "# 리뷰 내용이 저장된 컬럼명 확인 (예시에서는 'content'로 되어있음)\n",
+    "reviews = df['content'].dropna()\n",
+    "\n",
+    "# TF-IDF 벡터화기\n",
+    "vectorizer = TfidfVectorizer(stop_words='english', max_features=10)  # 'english'는 불용어 제거, max_features로 최댓값 설정\n",
+    "X = vectorizer.fit_transform(reviews)\n",
+    "\n",
+    "# 결과 출력\n",
+    "tfidf_df = pd.DataFrame(X.toarray(), columns=vectorizer.get_feature_names_out())\n",
+    "\n",
+    "# 출력하여 확인\n",
+    "print(tfidf_df)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
